--- a/sass/_boostrapAlter.scss
+++ b/sass/_boostrapAlter.scss
@@ -127,6 +127,11 @@ $red-color: #f72210;
     height: 170px;
   }
 
+  .nav-middle-wrap {
+    width: 98%;
+    clip-path: polygon(0 0%, 95% 0%, 100% 100%, 0% 100%);
+  }
+
   .nav-middle a {
     border-right: 1px solid rgb(230, 228, 228);
     font-size: 1rem;
